# whetstone-rust

./: .gitignore  Cargo.toml  README.md
demo/: Cargo.toml
demo/src/: demo.rs
doc/: layout.md
src/: demo.rs  equation.rs  error.rs  lib.rs  parser.rs  sandbox.rs  test.rs
src/bindings/: definitions.rs  mod.rs
src/equation/: mod.rs
src/expressions/: constant.rs  function.rs  mod.rs  number.rs  value.rs  variable.rs
src/parser/: definitions.rs  functions.rs  mod.rs  rulesets.rs
src/parser/bindings/: mod.rs
src/parser/ruleset/: bindings.rs  mod.rs  rule.rs
src/parser/rulesets/: mod.rs  standard.rs
src/syntax/: mod.rs
src/syntax/json/: latex.json  standard.json
src/syntax/ruleset/: mod.rs  rule.rs
syntax/: layout.md  standard.json
