[package]
name = "whetstone"
version = "0.1.0"
authors = ["Rowan Preston <rowan.t.preston@gmail.com>"]
edition = "2021"

[dependencies]
num-traits = "0.2.19"
regex = "1.11.1"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"

[lib]
name = "whetstone"
path = "src/lib.rs"

[[bin]]
name = "whetstone-test"
path = "src/test.rs"
